# zaqar-ui

./: .eslintrc  .gitignore  .gitreview  .zuul.yaml  MANIFEST.in  README.rst  babel-django.cfg  babel-djangojs.cfg  lower-constraints.txt  manage.py  package.json  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  test-shim.js  tox.ini
devstack/: plugin.sh  settings
doc/: requirements.txt
doc/source/: conf.py  index.rst  install.rst
doc/source/configuration/: index.rst
doc/source/contributor/: index.rst
doc/source/releases/: 0.1.0.rst
releasenotes/notes/: drop-py-2-7-d9e918f5c9f3bb33.yaml  init-action-fe41bfe3e2473364.yaml  pike-9c813ecd64a1e2f2.yaml  pool-flavor-panel-acf61d32e34246f2.yaml  pool-panel-020bf94bc34b4cd8.yaml  queens-ae86cb21aebaadfd.yaml
releasenotes/source/: conf.py  index.rst  unreleased.rst
releasenotes/source/locale/de/LC_MESSAGES/: releasenotes.po
releasenotes/source/locale/en_GB/LC_MESSAGES/: releasenotes.po
releasenotes/source/locale/fr/LC_MESSAGES/: releasenotes.po
tools/: install_venv.py
zaqar_ui/: __init__.py  karma.conf.js  version.py
zaqar_ui/api/: __init__.py  zaqar.py
zaqar_ui/api/rest/: __init__.py  zaqar.py
zaqar_ui/content/pool-flavors/: panel.py
zaqar_ui/content/pool_flavors/: panel.py  urls.py
zaqar_ui/content/pools/: panel.py  urls.py
zaqar_ui/content/queues/: __init__.py  panel.py  urls.py  views.py
zaqar_ui/enabled/: _1510_project_messaging_group.py  _1520_project_queues.py  _2510_admin_messaging_group.py  _2520_admin_pools.py  _2530_admin_pool_flavors.py
zaqar_ui/locale/: django.pot  djangojs.pot
zaqar_ui/locale/de/LC_MESSAGES/: django.po  djangojs.po
zaqar_ui/locale/en_GB/LC_MESSAGES/: django.po  djangojs.po
zaqar_ui/locale/fr/LC_MESSAGES/: django.po  djangojs.po
zaqar_ui/locale/id/LC_MESSAGES/: django.po  djangojs.po
zaqar_ui/locale/ja/LC_MESSAGES/: django.po  djangojs.po
zaqar_ui/locale/ko_KR/LC_MESSAGES/: django.po  djangojs.po
zaqar_ui/locale/pt_BR/LC_MESSAGES/: django.po  djangojs.po
zaqar_ui/locale/ru/LC_MESSAGES/: django.po  djangojs.po
zaqar_ui/locale/tr_TR/LC_MESSAGES/: django.po  djangojs.po
zaqar_ui/locale/zh_CN/LC_MESSAGES/: django.po  djangojs.po
zaqar_ui/locale/zh_Hans/LC_MESSAGES/: django.po  djangojs.po
zaqar_ui/test/: helpers.py  settings.py  test_data.py
zaqar_ui/test/api_tests/: rest_api_tests.py  test_rest_api.py
(+67 files in other folders)
